Update language translations in en.json and es.json

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,24 +1,45 @@
 {
-	"NOT_FOUND": "404 - Page not found",
-	"GO_TO_HOMEPAGE": "Go to homepage",
-	"WELCOME_TO": "Welcome to",
-	"PROJECT_DESC": "A Centurio boilerplate solution",
-	"SIGN_IN": "Sign in",
-	"LOGOUT": "Logout",
-	"HOME": "Home",
-	"VERSION": "Version",
-	"USER": "User",
-	"EMAIL": "E-mail",
-	"FORGOT_YOUR_PWD": "Forgot your password?",
-	"BACK_TO_LOGIN": "Back to login",
-	"VALIDATE_ACCOUNT": "Validate the account",
-	"VALIDATE": "Validate",
-	"PASSWORD": "Password",
-	"LOADING": "Loading",
-	"CLOSE": "Close",
-	"DELETE": "Delete",
-	"ALERT_DELETE_ENTRY": "Are you sure you want to delete this entry?",
-	"RESET_PASSWORD": "Reset password",
-	"FIELD_REQUIRED": "This field is required",
-	"FIELD_EMAIL": "This field must be an email"
+	"username": "Username",
+	"firstname": "First Name",
+	"lastname": "Last Name",
+	"name": "Name",
+	"email": "Email Address",
+	"password": "Password",
+	"confirmPassword": "Confirm Password",
+	"oldPassword": "Old Password",
+	"charactersRequired": "At least 8 characters",
+
+	"welcomeback": "Welcome back!",
+	"pleaselogin": "Please log in",
+	"rememberme": "Remember me",
+	"forgotpassword": "Forgot your password?",
+	"login": "Log in",
+	"donthaveaccount": "Don't have an account?",
+	"registerHere": "Register here",
+	
+	"register": "Register",
+	"orSinInWith": "Or sign in with",
+	"alreadyaccount": "Already have an account?",
+	"loginHere": "Log in here",
+	"ByRegistering": "By registering, you agree to our",
+	"termsOfService": "Terms of Service",
+	"and": "and",
+	"privacyPolicy": "Privacy Policy",
+
+	"resetpassword": "Reset Your Password",
+	"sendPasswordResetLink": "Send Password Reset Link",
+	"changePassword": "Change Password",
+	"changePasswordHeading": "You are only one step a way from your new password, recover your password now.",
+
+	"home": "Home",
+	"logout": "Log out",
+
+	
+	"nameError": "I'm sure you must have a name!",
+	"phoneNo": "Phone Number",
+	"bio": "Enter Biography",
+	"termsConditions": "I accept the terms and conditions.",
+	"submit": "Submit",
+	"changepassword": "Change Password",
+	"logout": "Log out"
 }
