--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,24 +1,44 @@
 {
-	"NOT_FOUND": "404 - Página no encontrada",
-	"GO_TO_HOMEPAGE": "Ir a la página de inicio",
-	"WELCOME_TO": "Bienvenido a",
-	"PROJECT_DESC": "Una solución boilerplate de Centurio",
-	"SIGN_IN": "Iniciar sesión",
-	"LOGOUT": "Cerrar sesión",
-	"HOME": "Inicio",
-	"VERSION": "Versión",
-	"USER": "Usuario",
-	"EMAIL": "Correo electrónico",
-	"FORGOT_YOUR_PWD": "¿Ha olvidado su contraseña?",
-	"BACK_TO_LOGIN": "Volver al inicio de sesión",
-	"VALIDATE_ACCOUNT": "Validar la cuenta",
-	"VALIDATE": "Validar",
-	"PASSWORD": "Contraseña",
-	"LOADING": "Cargando",
-	"CLOSE": "Cerrar",
-	"DELETE": "Borrar",
-	"ALERT_DELETE_ENTRY": "¿Está seguro de que desea borrar esta entrada?",
-	"RESET_PASSWORD": "Restablecer contraseña",
-	"FIELD_REQUIRED": "Este campo es obligatorio",
-	"FIELD_EMAIL": "Este campo debe ser un correo electrónico"
+	"username": "Nombre de usuario",
+	"firstname": "Nombre",
+	"lastname": "Apellido",
+	"name": "Nombre",
+	"email": "Dirección de correo electrónico",
+	"password": "Contraseña",
+	"confirmPassword": "Confirmar contraseña",
+	"oldPassword": "Contraseña anterior",
+	"charactersRequired": "Al menos 8 carácteres",
+
+	"welcomeback": "¡Bienvenido de nuevo!",
+	"pleaselogin": "Por favor inicia sesión",
+	"rememberme": "Recuérdame",
+	"forgotpassword": "¿Se te olvidó tu contraseña?",
+	"login": "Iniciar sesión",
+	"donthaveaccount": "¿No tienes una cuenta?",
+	"registerHere": "Regístrate aquí",
+	
+	"register": "Registrarme",
+	"orSinInWith": "O inicia sesión con",
+	"alreadyaccount": "¿Ya tienes una cuenta?",
+	"loginHere": "Inicia sesión aquí",
+	"ByRegistering": "Al registrarte, aceptas nuestros",
+	"termsOfService": "Términos de servicio",
+	"and": "y",
+	"privacyPolicy": "Política de privacidad",
+
+	"resetpassword": "Restablesca su contraseña",
+	"sendPasswordResetLink": "Enviar enlace de restablecimiento de contraseña",
+	"changePassword": "Cambiar contraseña",
+	"changePasswordHeading": "Sólo estás a un paso de tu nueva contraseña, recupérala ahora.",
+
+	"home": "Inicio",
+	"logout": "Cerrar sesión",
+
+	"nameError": "¡Estoy seguro de que debes tener un nombre!",
+	"phoneNo": "Número de teléfono",
+	"bio": "Ingrese biografía",
+	"termsConditions": "Acepto los términos y condiciones.",
+	"submit": "Enviar",
+	"changepassword": "Cambia la contraseña",
+	"logout": "Cerrar sesión"
 }
