--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -6,39 +6,37 @@
 	"email": "Dirección de correo electrónico",
 	"password": "Contraseña",
 	"confirmPassword": "Confirmar contraseña",
-	"oldPassword": "Contraseña anterior",
-	"charactersRequired": "Al menos 8 carácteres",
+	"oldPassword": "Contraseña antigua",
+	"charactersRequired": "Al menos 8 caracteres",
 
-	"welcomeback": "¡Bienvenido de nuevo!",
-	"pleaselogin": "Por favor inicia sesión",
-	"rememberme": "Recuérdame",
-	"forgotpassword": "¿Se te olvidó tu contraseña?",
+	"welcomeBack": "¡Bienvenido de nuevo!",
+	"pleaseLogin": "Por favor inicia sesión",
+	"rememberMe": "Recuérdame",
+	"forgotPassword": "¿Olvidaste tu contraseña?",
 	"login": "Iniciar sesión",
-	"donthaveaccount": "¿No tienes una cuenta?",
+	"dontHaveAccount": "¿No tienes una cuenta?",
 	"registerHere": "Regístrate aquí",
-	
-	"register": "Registrarme",
-	"orSinInWith": "O inicia sesión con",
-	"alreadyaccount": "¿Ya tienes una cuenta?",
+
+	"register": "Registrarse",
+	"orSinInWith": "O iniciar sesión con",
+	"alreadyAccount": "¿Ya tienes una cuenta?",
 	"loginHere": "Inicia sesión aquí",
 	"ByRegistering": "Al registrarte, aceptas nuestros",
-	"termsOfService": "Términos de servicio",
+	"termsOfService": "Términos de Servicio",
 	"and": "y",
-	"privacyPolicy": "Política de privacidad",
+	"privacyPolicy": "Política de Privacidad",
 
-	"resetpassword": "Restablesca su contraseña",
+	"resetPassword": "Restablecer tu contraseña",
 	"sendPasswordResetLink": "Enviar enlace de restablecimiento de contraseña",
 	"changePassword": "Cambiar contraseña",
-	"changePasswordHeading": "Sólo estás a un paso de tu nueva contraseña, recupérala ahora.",
+	"changePasswordHeading": "Estás a solo un paso de tu nueva contraseña, recupera tu contraseña ahora.",
 
 	"home": "Inicio",
 	"logout": "Cerrar sesión",
 
 	"nameError": "¡Estoy seguro de que debes tener un nombre!",
 	"phoneNo": "Número de teléfono",
-	"bio": "Ingrese biografía",
+	"bio": "Introduce la biografía",
 	"termsConditions": "Acepto los términos y condiciones.",
-	"submit": "Enviar",
-	"changepassword": "Cambia la contraseña",
-	"logout": "Cerrar sesión"
+	"submit": "Enviar"
 }
