Actualizar traducciones de bienvenida en en.json y es.json

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,7 +9,7 @@
 	"oldPassword": "Old Password",
 	"charactersRequired": "At least 8 characters",
 
-	"welcomeBack": "Welcome back!",
+	"welcomeBack": "Welcome!",
 	"pleaseLogin": "Please log in",
 	"rememberMe": "Remember me",
 	"forgotPassword": "Forgot your password?",
