--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -9,7 +9,7 @@
 	"oldPassword": "Contraseña antigua",
 	"charactersRequired": "Al menos 8 caracteres",
 
-	"welcomeBack": "¡Bienvenido de nuevo!",
+	"welcomeBack": "¡Bienvenido!",
 	"pleaseLogin": "Por favor inicia sesión",
 	"rememberMe": "Recuérdame",
 	"forgotPassword": "¿Olvidaste tu contraseña?",
