Actualizar traducciones de bienvenida en en.json y es.json

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -18,7 +18,7 @@
 	"registerHere": "Register here",
 
 	"register": "Register",
-	"orSinInWith": "Or sign in with",
+	"orRegisterWith": "Or register with",
 	"alreadyAccount": "Already have an account?",
 	"loginHere": "Log in here",
 	"ByRegistering": "By registering, you agree to our",
