--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -18,7 +18,7 @@
 	"registerHere": "Regístrate aquí",
 
 	"register": "Registrarse",
-	"orSinInWith": "O iniciar sesión con",
+	"orRegisterWith": "O regístrate con",
 	"alreadyAccount": "¿Ya tienes una cuenta?",
 	"loginHere": "Inicia sesión aquí",
 	"ByRegistering": "Al registrarte, aceptas nuestros",
