Actualizar traducciones y mejorar interfaz de usuario en el componente de cambio de contraseña

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,6 +7,8 @@
 	"password": "Password",
 	"confirmPassword": "Confirm Password",
 	"oldPassword": "Old Password",
+	"currentPassword": "Current Password",
+	"newPassword": "New Password",
 	"charactersRequired": "At least 8 characters",
 
 	"welcomeBack": "Welcome!",
@@ -32,6 +34,8 @@
 	"changePasswordHeading": "You are only one step a way from your new password, recover your password now.",
 
 	"home": "Home",
+	"profile": "Profile",
+	"devicesConnected": "Devices Connected",
 	"logout": "Log out",
 
 	"nameError": "I'm sure you must have a name!",
