--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -7,6 +7,8 @@
 	"password": "Contraseña",
 	"confirmPassword": "Confirmar contraseña",
 	"oldPassword": "Contraseña antigua",
+	"currentPassword": "Contraseña actual",
+	"newPassword": "Nueva contraseña",
 	"charactersRequired": "Al menos 8 caracteres",
 
 	"welcomeBack": "¡Bienvenido!",
@@ -32,6 +34,8 @@
 	"changePasswordHeading": "Estás a solo un paso de tu nueva contraseña, recupera tu contraseña ahora.",
 
 	"home": "Inicio",
+	"profile": "Perfil",
+	"devicesConnected": "Dispositivos conectados",
 	"logout": "Cerrar sesión",
 
 	"nameError": "¡Estoy seguro de que debes tener un nombre!",
