Actualizar traducciones y mejorar interfaz de usuario en el componente de cambio de contraseña

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -36,6 +36,7 @@
 	"home": "Home",
 	"profile": "Profile",
 	"devicesConnected": "Devices Connected",
+	"deviceConnectedIn": "Device connected in",
 	"logout": "Log out",
 
 	"nameError": "I'm sure you must have a name!",
