Actualizar traducciones y mejorar interfaz de usuario en el componente de cambio de contraseña

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -49,5 +49,11 @@
 	"delete": "Delete",
 	"save": "Save",
 	"update": "Update",
-	"change": "Change"
+	"change": "Change",
+
+	"confirmLogout": "Are you sure you want to log out?",
+	"confirmDelete": "Are you sure you want to delete this record?",
+	"confirmAction": "Are you sure you want to perform this action?",
+	"yesConfirm": "Yes, confirm",
+	"noCancel": "No, cancel"
 }
