Agregar traducciones para configuración de usuarios y roles

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -36,6 +36,9 @@
 
 	"home": "Home",
 	"profile": "Profile",
+	"settings": "Settings",
+	"users": "Users",
+	"rolesAndPermissions": "Roles & Permissions",
 	"devicesConnected": "Devices Connected",
 	"deviceConnectedIn": "Device connected in",
 	"logout": "Log out",
