Agregar traducciones para acciones en en.json y es.json

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -54,6 +54,16 @@
 	"save": "Save",
 	"update": "Update",
 	"change": "Change",
+	"remove": "Remove",
+	"add": "Add",
+	"new": "New",
+	"create": "Create",
+	"view": "View",
+	"next": "Next",
+	"previous": "Previous",
+	"search": "Search",
+	"filter": "Filter",
+	"actions": "Actions",
 
 	"confirmLogout": "Are you sure you want to log out?",
 	"confirmDelete": "Are you sure you want to delete this record?",
