--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -54,6 +54,16 @@
 	"save": "Guardar",
 	"update": "Actualizar",
 	"change": "Cambiar",
+	"remove": "Eliminar",
+	"add": "Añadir",
+	"new": "Nuevo",
+	"create": "Crear",
+	"view": "Ver",
+	"next": "Siguiente",
+	"previous": "Anterior",
+	"search": "Search",
+	"filter": "Filtrar",
+	"actions": "Acciones",
 
 	"confirmLogout": "¿Estás seguro de que deseas cerrar esta sesión?",
 	"confirmDelete": "¿Estás seguro de que deseas eliminar este registro?",
