--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,5 @@
 {
-	"username": "Username",
+	"userName": "Username",
 	"firstName": "First Name",
 	"lastName": "Last Name",
 	"name": "Name",
@@ -64,6 +64,26 @@
 	"search": "Search",
 	"filter": "Filter",
 	"actions": "Actions",
+	"date": "Date",
+	"status": "Status",
+	"active": "Active",
+	"inactive": "Inactive",
+	"show": "Show",
+	"verify": "Verify",
+	"verified": "Verified",
+	"created": "Created",
+	"updated": "Updated",
+	"back": "Back",
+	"yes": "Yes",
+	"no": "No",
+	"recordCreated": "Record created successfully",
+	"recordUpdated": "Record updated successfully",
+	"recordDeleted": "Record deleted successfully",
+	"recordFound": "Record found",
+	"recordNotFound": "Record not found",
+	"errorAsOccurred": "An error has occurred",
+	"deleteRecord": "Delete Record",
+	"deleteConfirmation": "Are you sure you want to delete this record?",
 
 	"confirmLogout": "Are you sure you want to log out?",
 	"confirmDelete": "Are you sure you want to delete this record?",
