--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1,9 +1,9 @@
 {
-	"username": "Nombre de usuario",
+	"userName": "Nombre de usuario",
 	"firstName": "Nombre",
 	"lastName": "Apellido",
 	"name": "Nombre",
-	"email": "Dirección de correo electrónico",
+	"email": "Correo electrónico",
 	"password": "Contraseña",
 	"confirmPassword": "Confirmar contraseña",
 	"oldPassword": "Contraseña antigua",
@@ -64,6 +64,27 @@
 	"search": "Search",
 	"filter": "Filtrar",
 	"actions": "Acciones",
+	"date": "Fecha",
+	"status": "Estado",
+	"active": "Activo",
+	"inactive": "Inactivo",
+	"show": "Mostrar",
+	"verify": "Verificar",
+	"verified": "Verificado",
+	"created": "Creado",
+	"updated": "Actualizado",
+	"back": "Atrás",
+	"selectRole": "Selecciona un rol",
+	"yes": "Sí",
+	"no": "No",
+	"recordCreated": "Registro creado con éxito",
+	"recordUpdated": "Registro actualizado con éxito",
+	"recordDeleted": "Registro eliminado con éxito",
+	"recordFound": "Registro encontrado",
+	"recordNotFound": "Registro no encontrado",
+	"errorAsOccurred": "Ha ocurrido un error",
+	"deleteRecord": "Eliminar registro",
+	"deleteConfirmation": "¿Estás seguro de que quieres borrar este registro?",
 
 	"confirmLogout": "¿Estás seguro de que deseas cerrar esta sesión?",
 	"confirmDelete": "¿Estás seguro de que deseas eliminar este registro?",
