Actualización en traducciones

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -74,6 +74,7 @@
 	"created": "Created",
 	"updated": "Updated",
 	"back": "Back",
+	"selectRole": "Select Role",
 	"yes": "Yes",
 	"no": "No",
 	"recordCreated": "Record created successfully",
@@ -88,7 +89,61 @@
 	"confirmLogout": "Are you sure you want to log out?",
 	"confirmDelete": "Are you sure you want to delete this record?",
 	"confirmAction": "Are you sure you want to perform this action?",
-	"confirmDeleteAccount": "Are you sure you want to delete your account?",
+	"confirmDeleteAccount": "Are you sure you want to delete your account? This action cannot be undone.",
 	"yesConfirm": "Yes, confirm",
-	"noCancel": "No, cancel"
+	"noCancel": "No, cancel",
+
+	"validation": {
+		"dataRequired": "Data is required",
+		"dataArray": "Data must be an array",
+		"dataAttributesRequired": "Data attributes are required",
+		"dataAttributesArray": "Data attributes must be an array",
+		"dataTypeRequired": "Data type is required",
+		"dataTypeString": "Data type must be a string",
+		"dataTypeIn": "Data type is not valid",
+		"usernameRequired": "Username is required",
+		"usernameUnique": "Username is already in use",
+		"usernameMax": "Username is too long",
+		"firstNameRequired": "First name is required",
+		"firstNameMax": "First name is too long",
+		"lastNameRequired": "Last name is required",
+		"lastNameMax": "Last name is too long",
+		"emailRequired": "Email is required",
+		"emailUnique": "Email is already in use",
+		"emailMax": "Email is too long",
+		"passwordRequired": "Password is required",
+		"passwordConfirmed": "Passwords do not match",
+		"passwordMin": "Password is too short",
+		"passwordMax": "Password is too long",
+		"passwordString": "Password must be a string",
+		"emailEmail": "Email must be a valid email address",
+		"emailExists": "No account found with this email",
+		"invalidCredentials": "The provided credentials are invalid",
+		"limitAuthDevices": "You have reached the limit of authorized devices",
+		"invalidEmail": "The provided email is not valid",
+		"tokenRequired": "Token is required",
+		"tokenString": "Token must be a string",
+		"tokenInvalid": "The provided token is not valid",
+		"tokenExpired": "The provided token has expired",
+		"userNotFound": "No user found with these credentials",
+		"isIncorrect": "is incorrect",
+		"passwordIncorrect": "The provided password is incorrect",
+		"deviceIdIsRequired": "Device ID is required",
+		"deviceIdMustBeString": "Device ID must be a string",
+		"deviceIdNotExists": "No device found with this ID"
+	},
+
+	"message": {
+		"loggedOut": "You have successfully logged out",
+		"loggedOutAllDevices": "You have logged out of all devices",
+		"emailVerified": "Your email has been successfully verified",
+		"emailAlreadyVerified": "Your email has already been verified",
+		"emailVerificationSent": "A verification link has been sent to your email",
+		"resetPasswordEmailSent": "A password reset link has been sent to your email",
+		"passwordResetSuccess": "Your password has been successfully reset",
+		"passwordChangedSuccessfully": "Your password has been successfully changed",
+		"accountDeletedSuccessfully": "Your account has been successfully deleted",
+		"deviceNotFound": "No device found",
+		"deviceLoggedOutSuccessfully": "The device has successfully logged out"
+	}
 }
