--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -89,7 +89,61 @@
 	"confirmLogout": "¿Estás seguro de que deseas cerrar esta sesión?",
 	"confirmDelete": "¿Estás seguro de que deseas eliminar este registro?",
 	"confirmAction": "¿Estás seguro de que deseas realizar esta acción?",
-	"confirmDeleteAccount": "¿Estás seguro de que deseas eliminar tu cuenta?",
+	"confirmDeleteAccount": "¿Estás seguro de que deseas eliminar tu cuenta? Esta acción no se puede deshacer.",
 	"yesConfirm": "Sí, confirmar",
-	"noCancel": "No, cancelar"
+	"noCancel": "No, cancelar",
+
+	"validation": {
+		"dataRequired": "Los datos son requeridos",
+		"dataArray": "Los datos deben ser un array",
+		"dataAttributesRequired": "Los atributos de los datos son requeridos",
+		"dataAttributesArray": "Los atributos de los datos deben ser un array",
+		"dataTypeRequired": "El tipo de datos es requerido",
+		"dataTypeString": "El tipo de datos debe ser una cadena de texto",
+		"dataTypeIn": "El tipo de datos no es válido",
+		"usernameRequired": "El nombre de usuario es requerido",
+		"usernameUnique": "El nombre de usuario ya está en uso",
+		"usernameMax": "El nombre de usuario es demasiado largo",
+		"firstNameRequired": "El nombre es requerido",
+		"firstNameMax": "El nombre es demasiado largo",
+		"lastNameRequired": "El apellido es requerido",
+		"lastNameMax": "El apellido es demasiado largo",
+		"emailRequired": "El correo electrónico es requerido",
+		"emailUnique": "El correo electrónico ya está en uso",
+		"emailMax": "El correo electrónico es demasiado largo",
+		"passwordRequired": "La contraseña es requerida",
+		"passwordConfirmed": "Las contraseñas no coinciden",
+		"passwordMin": "La contraseña es demasiado corta",
+		"passwordMax": "La contraseña es demasiado larga",
+		"passwordString": "La contraseña debe ser una cadena de texto",
+		"emailEmail": "El correo electrónico debe ser una dirección de correo electrónico válida",
+		"emailExists": "No se encontró ninguna cuenta con este correo electrónico",
+		"invalidCredentials": "Las credenciales proporcionadas son inválidas",
+		"limitAuthDevices": "Has alcanzado el límite de dispositivos autorizados",
+		"invalidEmail": "El correo electrónico proporcionado no es válido",
+		"tokenRequired": "El token es requerido",
+		"tokenString": "El token debe ser una cadena de texto",
+		"tokenInvalid": "El token proporcionado no es válido",
+		"tokenExpired": "El token proporcionado ha expirado",
+		"userNotFound": "No se encontró ningún usuario con estas credenciales",
+		"isIncorrect": "es incorrecto",
+		"passwordIncorrect": "La contraseña proporcionada es incorrecta",
+		"deviceIdIsRequired": "El ID del dispositivo es requerido",
+		"deviceIdMustBeString": "El ID del dispositivo debe ser una cadena de texto",
+		"deviceIdNotExists": "No se encontró ningún dispositivo con este ID"
+	},
+
+	"message": {
+		"loggedOut": "Has cerrado sesión con éxito",
+		"loggedOutAllDevices": "Has cerrado sesión en todos los dispositivos",
+		"emailVerified": "Tu correo electrónico ha sido verificado con éxito",
+		"emailAlreadyVerified": "Tu correo electrónico ya ha sido verificado",
+		"emailVerificationSent": "Se ha enviado un enlace de verificación a tu correo electrónico",
+		"resetPasswordEmailSent": "Se ha enviado un enlace de restablecimiento de contraseña a tu correo electrónico",
+		"passwordResetSuccess": "Tu contraseña ha sido restablecida con éxito",
+		"passwordChangedSuccessfully": "Tu contraseña ha sido cambiada con éxito",
+		"accountDeletedSuccessfully": "Tu cuenta ha sido eliminada con éxito",
+		"deviceNotFound": "No se encontró ningún dispositivo",
+		"deviceLoggedOutSuccessfully": "El dispositivo ha cerrado sesión con éxito"
+	}
 }
