feat: Add translations for permission-related messages

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -150,6 +150,7 @@
 		"loginSuccessful": "You have successfully logged in",
 		"loginFailed": "Login failed",
 		"registrationSuccessful": "You have successfully registered",
-		"registrationFailed": "Registration failed"
+		"registrationFailed": "Registration failed",
+		"permissionNotGranted": "Permission not granted"
 	}
 }
