feat: Update translations for roles and permissions

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -38,6 +38,9 @@
 	"profile": "Profile",
 	"settings": "Settings",
 	"users": "Users",
+	"rol": "Role",
+	"roles": "Roles",
+	"permissions": "Permissions",
 	"rolesAndPermissions": "Roles & Permissions",
 	"devicesConnected": "Devices Connected",
 	"deviceConnectedIn": "Device connected in",
