--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -38,6 +38,9 @@
 	"profile": "Perfil",
 	"settings": "Configuración",
 	"users": "Usuarios",
+	"rol": "Rol",
+	"roles": "Roles",
+	"permissions": "Permisos",
 	"rolesAndPermissions": "Roles y permisos",
 	"devicesConnected": "Dispositivos conectados",
 	"deviceConnectedIn": "Dispositivo conectado en",
