chore: Update language translations for country, device, browser, and IP address

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -96,6 +96,11 @@
 	"yesConfirm": "Yes, confirm",
 	"noCancel": "No, cancel",
 
+	"country": "Country",
+	"device": "Device",
+	"browser": "Browser",
+	"ipAddress": "IP Address",
+
 	"validation": {
 		"dataRequired": "Data is required",
 		"dataArray": "Data must be an array",
