chore: Update Spanish translation for search button

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -64,7 +64,7 @@
 	"view": "Ver",
 	"next": "Siguiente",
 	"previous": "Anterior",
-	"search": "Search",
+	"search": "Buscar",
 	"filter": "Filtrar",
 	"actions": "Acciones",
 	"date": "Fecha",
