--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -20,7 +20,7 @@
 	"registerHere": "Regístrate aquí",
 	"deleteAccount": "Eliminar cuenta",
 
-	"register": "Registrarse",
+	"register": "Regístrate",
 	"orRegisterWith": "O regístrate con",
 	"alreadyAccount": "¿Ya tienes una cuenta?",
 	"loginHere": "Inicia sesión aquí",
@@ -100,8 +100,10 @@
 	"device": "Dispositivo",
 	"browser": "Navegador",
 	"ipAddress": "Dirección IP",
+	"close": "Cerrar",
 
 	"validation": {
+		"thisFieldIsRequired": "Este campo es requerido",
 		"dataRequired": "Los datos son requeridos",
 		"dataArray": "Los datos deben ser un array",
 		"dataAttributesRequired": "Los atributos de los datos son requeridos",
