chore: Update language files with new translations for preferences and interval options

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -89,6 +89,17 @@
 	"errorAsOccurred": "An error has occurred",
 	"deleteRecord": "Delete Record",
 	"deleteConfirmation": "Are you sure you want to delete this record?",
+	"preferences": "Preferences",
+	"price": "Price",
+	"interval_count": "Interval Count",
+	"interval": "Interval",
+	"trial_days": "Trial Days",
+	"max_users": "Max Users",
+	"description": "Description",
+	"day": "Day",
+	"week": "Week",
+	"month": "Month",
+	"year": "Year",
 
 	"confirmLogout": "Are you sure you want to log out?",
 	"confirmDelete": "Are you sure you want to delete this record?",
