--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -88,6 +88,17 @@
 	"errorAsOccurred": "Ha ocurrido un error",
 	"deleteRecord": "Eliminar registro",
 	"deleteConfirmation": "¿Estás seguro de que quieres borrar este registro?",
+	"preferences": "Preferencias",
+	"price": "Precio",
+	"interval_count": "Numero de intervalos",
+	"interval": "Intervalo",
+	"trial_days": "Días de prueba",
+	"max_users": "Limite de usuarios",
+	"description": "Descripción",
+	"day": "Día",
+	"week": "Semana",
+	"month": "Mes",
+	"year": "Año",
 
 	"confirmLogout": "¿Estás seguro de que deseas cerrar esta sesión?",
 	"confirmDelete": "¿Estás seguro de que deseas eliminar este registro?",
