feat: Update language translations for subscription options

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -95,10 +95,11 @@
 	"trial_days": "Trial Days",
 	"max_users": "Max Users",
 	"description": "Description",
-	"day": "Day",
-	"week": "Week",
-	"month": "Month",
-	"year": "Year",
+	"day": "Daily",
+	"week": "Weekly",
+	"month": "Monthly",
+	"year": "Annual",
+	"subscribe_to": "Subscribe to",
 
 	"confirmLogout": "Are you sure you want to log out?",
 	"confirmDelete": "Are you sure you want to delete this record?",
