--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -95,10 +95,11 @@
 	"trial_days": "Días de prueba",
 	"max_users": "Limite de usuarios",
 	"description": "Descripción",
-	"day": "Día",
-	"week": "Semana",
-	"month": "Mes",
-	"year": "Año",
+	"day": "Diario",
+	"week": "Semanal",
+	"month": "Mesual",
+	"year": "Anual",
+	"subscribe_to": "Suscribirse a",
 
 	"confirmLogout": "¿Estás seguro de que deseas cerrar esta sesión?",
 	"confirmDelete": "¿Estás seguro de que deseas eliminar este registro?",
