feat: Update language translations for light and dark mode

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -127,6 +127,10 @@
 	"declined": "Declined",
 	"cancelled": "Cancelled",
 
+	"light": "Light",
+	"dark": "Dark",
+	"auto": "Auto",
+
 	"validation": {
 		"thisFieldIsRequired": "This field is required",
 		"dataRequired": "Data is required",
