feat: Update language translations for payment options

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -131,6 +131,8 @@
 	"dark": "Dark",
 	"auto": "Auto",
 
+	"pay_with": "Pay with",
+
 	"validation": {
 		"thisFieldIsRequired": "This field is required",
 		"dataRequired": "Data is required",
