--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -131,6 +131,8 @@
 	"dark": "Oscuro",
 	"auto": "Automático",
 
+	"pay_with": "Pagar con",
+
 	"validation": {
 		"thisFieldIsRequired": "Este campo es requerido",
 		"dataRequired": "Los datos son requeridos",
