feat: Corregir error en traducción de "month" en archivo de idioma es.json

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -97,7 +97,7 @@
 	"description": "Descripción",
 	"day": "Diario",
 	"week": "Semanal",
-	"month": "Mesual",
+	"month": "Mensual",
 	"year": "Anual",
 	"subscribe_to": "Suscribirse a",
 
