feat: Actualizar archivos de idioma con nuevas traducciones para paquetes, suscripciones y acciones de pago

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -136,6 +136,7 @@
 	"pay_with": "Pay with",
 	"downloadInvoice": "Download Invoice",
 	"cancelSubscription": "Cancel Subscription",
+	"reasonForCancellation": "Reason for cancellation",
 
 	"validation": {
 		"thisFieldIsRequired": "This field is required",
