--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -136,6 +136,7 @@
 	"pay_with": "Pagar con",
 	"downloadInvoice": "Descargar factura",
 	"cancelSubscription": "Cancelar suscripción",
+	"reasonForCancellation": "Motivo de cancelación",
 
 	"validation": {
 		"thisFieldIsRequired": "Este campo es requerido",
