--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -147,6 +147,18 @@
 	"address": "Address",
 	"postalCode": "Postal Code",
 	"phone": "Phone",
+	"attention": "Attention!",
+	"needToLogin": "In order to pay for services, you need to log in.",
+	"here": "here",
+	"ifYouDontHaveAccount": "If you don't have an account, you can register",
+	"orIfYouAlreadyHaveAccount": "or if you already have an account, you can log in",
+	"paySubscription": "Pay Subscription",
+	"availablePaymentMethods": "Available Payment Methods",
+	"serviceData": "Service Data",
+	"packageToBeSubscribed": "Package to be subscribed",
+	"packagePrice": "Package Price",
+	"subscriptionInterval": "Subscription Interval",
+	"buyer": "Buyer",
 
 	"validation": {
 		"thisFieldIsRequired": "This field is required",
